--- a/requirements.txt
+++ b/requirements.txt
@@ -229,7 +229,7 @@ SQLAlchemy==2.0.32
 stack-data==0.6.3
 starlette==0.40.0
 streamlit==1.37.1
-sympy==1.13.2
+sympy==1.13.1
 tabulate==0.9.0
 tenacity==8.5.0
 terminado==0.18.1
@@ -237,15 +237,15 @@ threadpoolctl==3.5.0
 tiktoken==0.7.0
 tinycss2==1.3.0
 tldextract==5.1.2
-tokenizers==0.19.1
+tokenizers==0.20.1
 toml==0.10.2
-torch==2.4.1+cu118
+torch==2.5.1
 torchaudio==2.4.1+cu118
-torchvision==0.19.1+cu118
+torchvision==0.20.1
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
-transformers==4.44.2
+transformers==4.46.1
 Twisted==24.3.0
 twisted-iocpsupport==1.0.4
 typer==0.12.5
