updated final version

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 LANGCHAIN_API_KEY="cuongnc"    # Trên Windows
+
+COHERE_API_KEY = "d9Anh5qPNO04hzeXA9m5zDzHll1aAqIqUnlGOLah"
+
+GOOGLE_API_KEY = "AIzaSyB69wa7_whSO7jXOkzCebxV6sEHjf0Oluk"
