--- a/.env.examples
+++ b/.env.examples
@@ -1,7 +1,7 @@
 LANGCHAIN_API_KEY = "cuongnc"    # Trên Windows
 
-COHERE_API_KEY = "ADD KEY HERE"
-
 GOOGLE_API_KEY = "ADD KEY HERE"
 
-
+# Embedding model
+# EMBEDDING_MODEL = "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2"
+EMBEDDING_MODEL = 'bkai-foundation-models/vietnamese-bi-encoder'
